Pascal/pidigits/gmp.pas


{ Change the space allocated for integer to n bits. The value in integer is preserved if it fits, or is set to 0 if not. }
procedure mpz_realloc2(var integer_: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_realloc2';
{ Remove all occurrences of the factor f from op and store the result in rop }
function mpz_remove(var rop, op, f: mpz_t): valuint; cdecl; external LIB name '__gmpz_remove';
{ Set rop to trunc(op^(1/n)), the truncated integer part of the nth root of op. Return non-zero if the computation was exact, i.e., if op is rop to the nth power. }
function mpz_root(var rop, op: mpz_t; n: valuint): longint; cdecl; external LIB name '__gmpz_root';
{ Set root to trunc(u^(1/n)), the truncated integer part of the nth root of u. Set rem to the remainder, (u − root^n). }
procedure mpz_rootrem(var root, rem, u: mpz_t; n: valuint); cdecl; external LIB name '__gmpz_rootrem';
{ Generate a random integer with long strings of zeros and ones in the binary representation }
procedure mpz_rrandomb(var rop: mpz_t; var state: randstate_t; n: valuint); cdecl; external LIB name '__gmpz_rrandomb';
{ Scan op, starting from bit starting_bit, towards more significant bits, until the first 0 bit is found }
function mpz_scan0(var op: mpz_t; starting_bit: valuint): valuint; cdecl; external LIB name '__gmpz_scan0';
{ Scan op, starting from bit starting_bit, towards more significant bits, until the first 1 bit is found }
function mpz_scan1(var op: mpz_t; starting_bit: valuint): valuint; cdecl; external LIB name '__gmpz_scan1';
{ Set the value of rop from op }
procedure mpz_set(var rop, op: mpz_t); cdecl; external LIB name '__gmpz_set';
{ Set the value of rop from op }
procedure mpz_set_d(var rop: mpz_t; op: double); cdecl; external LIB name '__gmpz_set_d';
{ Set the value of rop from op }
procedure mpz_set_f(var rop: mpz_t; var op: mpf_t); cdecl; external LIB name '__gmpz_set_f';
{ Set the value of rop from op }
procedure mpz_set_q(var rop: mpz_t; var op: mpq_t); cdecl; external LIB name '__gmpz_set_q';
{ Set the value of rop from op }
procedure mpz_set_si(var rop: mpz_t; op: valsint); cdecl; external LIB name '__gmpz_set_si';
{ Set the value of rop from str, a null-terminated C string in base base. White space is allowed in the string, and is simply ignored. }
function mpz_set_str(var rop: mpz_t; str: pchar; base: longint): longint; cdecl; external LIB name '__gmpz_set_str';
{ Set the value of rop from op }
procedure mpz_set_ui(var rop: mpz_t; op: valuint); cdecl; external LIB name '__gmpz_set_ui';
{ Set bit bit_index in rop }
procedure mpz_setbit(var rop: mpz_t; bit_index: valuint); cdecl; external LIB name '__gmpz_setbit';
{ Return the size of op measured in number of limbs }
function mpz_size(var op: mpz_t): sizeuint; cdecl; external LIB name '__gmpz_size';
{ Return the size of op measured in number of digits in the given base }
function mpz_sizeinbase(var op: mpz_t; base: longint): sizeuint; cdecl; external LIB name '__gmpz_sizeinbase';
{ Set rop to trunc(sqrt(op)), the truncated integer part of the square root of op }
procedure mpz_sqrt(var rop, op: mpz_t); cdecl; external LIB name '__gmpz_sqrt';
{ Set rop1 to trunc(sqrt(op)), likempz_sqrt. Set rop2 to the remainder (op − rop1^2), which will be zero if op is a perfect square. }
procedure mpz_sqrtrem(var rop1, rop2, op: mpz_t); cdecl; external LIB name '__gmpz_sqrtrem';
{ Set rop to op1 − op2 }
procedure mpz_sub(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_sub';
{ Set rop to op1 − op2 }
procedure mpz_sub_ui(var rop, op1: mpz_t; op2: valuint); cdecl; external LIB name '__gmpz_sub_ui';
{ Set rop to op1 − op2 }
procedure mpz_ui_sub(var rop: mpz_t; op1: valuint; var op2: mpz_t); cdecl; external LIB name '__gmpz_ui_sub';
{ Set rop to rop − op1 × op2 }
procedure mpz_submul(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_submul';
{ Set rop to rop − op1 × op2 }
procedure mpz_submul_ui(var rop, op1: mpz_t; op2: valuint); cdecl; external LIB name '__gmpz_submul_ui';
{ Swap the values rop1 and rop2 efficiently }
procedure mpz_swap(var rop1, rop2: mpz_t); cdecl; external LIB name '__gmpz_swap';
{ Divide n by d, forming a quotient q. Round mode trunc. }
procedure mpz_tdiv_q(var q, n, d: mpz_t); cdecl; external LIB name '__gmpz_tdiv_q';
{ Divide n by d, forming a quotient q. d = 2^b. Round mode trunc. }
procedure mpz_tdiv_q_2exp(var q, n: mpz_t; b: valuint); cdecl; external LIB name '__gmpz_tdiv_q_2exp';
{ Divide n by d, forming a quotient q. Round mode trunc. }
function mpz_tdiv_q_ui(var q, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_tdiv_q_ui';
{ Divide n by d, forming a quotient q and remainder r. Round mode trunc. }
procedure mpz_tdiv_qr(var q, r, n, d: mpz_t); cdecl; external LIB name '__gmpz_tdiv_qr';
{ Divide n by d, forming a quotient q and remainder r. Round mode trunc. }
function mpz_tdiv_qr_ui(var q, r, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_tdiv_qr_ui';
{ Divide n by d, forming a remainder r. Round mode trunc. }
procedure mpz_tdiv_r(var r, n, d: mpz_t); cdecl; external LIB name '__gmpz_tdiv_r';
{ Divide n by d, forming a remainder r. d = 2^b. Round mode trunc. }
procedure mpz_tdiv_r_2exp(var r, n: mpz_t; b: valuint); cdecl; external LIB name '__gmpz_tdiv_r_2exp';
{ Divide n by d, forming a remainder r. Round mode trunc. }
function mpz_tdiv_r_ui(var r, n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_tdiv_r_ui';
{ Divide n by d. Round mode trunc. }
function mpz_tdiv_ui(var n: mpz_t; d: valuint): valuint; cdecl; external LIB name '__gmpz_tdiv_ui';
{ Test bit bit_index in op and return 0 or 1 accordingly }
function mpz_tstbit(var rop: mpz_t; bit_index: valuint): longint; cdecl; external LIB name '__gmpz_tstbit';
{ Set rop to base^exp. The case 0^0 yields 1 }
procedure mpz_ui_pow_ui(var rop: mpz_t; base, exp: valuint); cdecl; external LIB name '__gmpz_ui_pow_ui';
{ Generate a uniformly distributed random integer in the range 0 to 2^n − 1, inclusive }
procedure mpz_urandomb(var rop: mpz_t; var state: randstate_t; n: valuint); cdecl; external LIB name '__gmpz_urandomb';
{ Generate a uniform random integer in the range 0 to n − 1, inclusive }
procedure mpz_urandomm(var rop: mpz_t; var state: randstate_t; var n: mpz_t); cdecl; external LIB name '__gmpz_urandomm';
{ Set rop to op1 bitwise exclusive-or op2 }
procedure mpz_xor(var rop, op1, op2: mpz_t); cdecl; external LIB name '__gmpz_xor';

// ---- Rational Number Functions ----

{ Set rop to the absolute value of op }
procedure mpq_abs(var rop, op: mpq_t); cdecl; external LIB name '__gmpq_abs';
{ Set sum to addend1 + addend2 }
procedure mpq_add(var sum, addend1, addend2: mpq_t); cdecl; external LIB name '__gmpq_add';
{ Remove any factors that are common to the numerator and denominator of op, and make the denominator positive }
procedure mpq_canonicalize(var op: mpq_t); cdecl; external LIB name '__gmpq_canonicalize';
{ Free the space occupied by rational number }
procedure mpq_clear(var rational_number: mpq_t); cdecl; external LIB name '__gmpq_clear';
{ Compare op1 and op2. Return a positive value if op1 > op2, zero if op1 = op2, and a negative value if op1 < op2 }
function mpq_cmp(var op1, op2: mpq_t): longint; cdecl; external LIB name '__gmpq_cmp';
{ Compare op1 and num2/den2. Return a positive value if op1 > num2/den2, zero if op1 = num2/den2, and a negative value if op1 < num2/den2 }
function mpq_cmp_si(var op1: mpq_t; num2: valsint; den2: valuint): longint; cdecl; external LIB name '__gmpq_cmp_si';
{ Compare op1 and num2/den2. Return a positive value if op1 > num2/den2, zero if op1 = num2/den2, and a negative value if op1 < num2/den2 }
function mpq_cmp_ui(var op1: mpq_t; num2, den2: valuint): longint; cdecl; external LIB name '__gmpq_cmp_ui';
{ Set quotient to dividend/divisor }
procedure mpq_div(var quotient, dividend, divisor: mpq_t); cdecl; external LIB name '__gmpq_div';
{ Set rop to op1/(2^op2) }
procedure mpq_div_2exp(var rop, op1: mpq_t; op2: valuint); cdecl; external LIB name '__gmpq_div_2exp';
{ Return non-zero if op1 and op2 are equal, zero if they are non-equal }
function mpq_equal(var op1, op2: mpq_t): longint; cdecl; external LIB name '__gmpq_equal';
{ Get the numerator of a rational }
procedure mpq_get_num(var numerator: mpz_t; var rational: mpq_t); cdecl; external LIB name '__gmpq_get_num';
{ Get the denominator of a rational }
procedure mpq_get_den(var denominator: mpz_t; var rational: mpq_t); cdecl; external LIB name '__gmpq_get_den';
{ Convert op to a double, truncating if necessary (ie. rounding towards zero) }
function mpq_get_d(var op: mpq_t): double; cdecl; external LIB name '__gmpq_get_d';
{ Convert op to a string of digits in base base }
function mpq_get_str(str: pchar; base: longint; var op: mpq_t): pchar; cdecl; external LIB name '__gmpq_get_str';
{ Initialize dest rational and set it to 0/1 }
procedure mpq_init(out dest_rational: mpq_t); cdecl; external LIB name '__gmpq_init';
{ Set inverted_number to 1/number }
procedure mpq_inv(var inverted_number, number: mpq_t); cdecl; external LIB name '__gmpq_inv';
{ Set product to multiplier × multiplicand }
procedure mpq_mul(var product, multiplier, multiplicand: mpq_t); cdecl; external LIB name '__gmpq_mul';
{ Set rop to op1 × (2^op2) }
procedure mpq_mul_2exp(var rop, op1: mpq_t; op2: valuint); cdecl; external LIB name '__gmpq_mul_2exp';
{ Set negated_operand to −operand }
procedure mpq_neg(var negated_operand, operand: mpq_t); cdecl; external LIB name '__gmpq_neg';
{ Assign rop from op }
procedure mpq_set(var rop, op: mpq_t); cdecl; external LIB name '__gmpq_set';
{ Set rop to the value of op. There is no rounding, this conversion is exact. }
procedure mpq_set_d(var rop: mpq_t; op: double); cdecl; external LIB name '__gmpq_set_d';
{ Set the denominator of a rational }
procedure mpq_set_den(var rational: mpq_t; var denominator: mpz_t); cdecl; external LIB name '__gmpq_set_den';
{ Set rop to the value of op. There is no rounding, this conversion is exact. }
procedure mpq_set_f(var rop: mpq_t; var op: mpf_t); cdecl; external LIB name '__gmpq_set_f';
{ Set the numerator of a rational }
procedure mpq_set_num(var rational: mpq_t; var numerator: mpz_t); cdecl; external LIB name '__gmpq_set_num';
{ Set the value of rop to op1/op2 }
procedure mpq_set_si(var rop: mpq_t; op1: valsint; op2: valuint); cdecl; external LIB name '__gmpq_set_si';
{ Set rop from a null-terminated string str in the given base }
function mpq_set_str(var rop: mpq_t; str: pchar; base: longint): longint; cdecl; external LIB name '__gmpq_set_str';
{ Set the value of rop to op1/op2 }
procedure mpq_set_ui(var rop: mpq_t; op1, op2: valuint); cdecl; external LIB name '__gmpq_set_ui';
{ Assign rop from op }
procedure mpq_set_z(var rop: mpq_t; var op: mpz_t); cdecl; external LIB name '__gmpq_set_z';
{ Set difference to minuend − subtrahend }
procedure mpq_sub(var difference, minuend, subtrahend: mpq_t); cdecl; external LIB name '__gmpq_sub';
{ Swap the values rop1 and rop2 efficiently }
procedure mpq_swap(var rop1, rop2: mpq_t); cdecl; external LIB name '__gmpq_swap';

// ---- Floating-point Functions ----
